2010-03-13  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        Add "Show FPS" menu option to QtLauncher.

        [Qt] QtLauncher need a menu option to show/hide FPS
        https://bugs.webkit.org/show_bug.cgi?id=35794

        * QtLauncher/main.cpp:
        (LauncherWindow::showFPS):
        (LauncherWindow::createChrome):

2010-03-13  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        Add a "Toggle FullScreen" option to QtLauncher Menu.

        [Qt] QtLauncher needs an option to toggle FullScreen Mode
        https://bugs.webkit.org/show_bug.cgi?id=35755

        * QtLauncher/main.cpp:
        (LauncherWindow::init):
        (LauncherWindow::eventFilter):
        (LauncherWindow::initializeView):
        (LauncherWindow::toggleFullScreenMode):
        (LauncherWindow::createChrome):

2010-03-12  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Dimitri Glazkov.

        Fix typo in websocket_server (path_from_base instead of 
        path_from_chromium_base).

        https://bugs.webkit.org/show_bug.cgi?id=36074

        * Scripts/webkitpy/layout_tests/port/websocket_server.py:

2010-03-12  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Adam Barth.

        new-run-webkit-tests --new-baseline doesn't work at all.

        It attempts to call a method that isn't defined. To fix it, I
        removed the unnecessary and unnecessarily confusing 'platform'
        argument to the test_type constructor and use the Port object that
        is passed in instead, since we are only ever generating a baseline
        from the port that is currently executing.

        https://bugs.webkit.org/show_bug.cgi?id=36046

        * Scripts/webkitpy/layout_tests/port/mac.py:
        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py: