@@ -1,3 +1,12 @@
+2010-03-13  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by David Levin.
+
+        new-run-webkit-tests fails with --debug option.
+        https://bugs.webkit.org/show_bug.cgi?id=36067
+
+        * Scripts/webkitpy/layout_tests/port/mac.py:
+
 2010-03-13  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>
 
         Reviewed by Kenneth Rohde Christiansen.
